--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@ span.wpcf7-form-control-wrap .wpcf7-form-control.wpcf7-checkbox input[type=check
 								data-frame_999="o:0;st:w;sR:5700;"
 								style="z-index:10;font-family:Montserrat;"
 							>Repayments from 12 months<br />
- up to 60 months! 
+ up to 60 months! With only 6% interest!!!
 							</rs-layer><!--
 
 							--><a
@@ -741,7 +741,7 @@ span.wpcf7-form-control-wrap .wpcf7-form-control.wpcf7-checkbox input[type=check
 	</div> 
 	<div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<p style="text-align: center;"><span style="color: #ffffff;">You will only pay at the end of the month after processing your loan application. You need to confirm this via Debi-Check which will also confirm the correct personal details that will allow us to proceed and speed up the loan process.</span></p>
+			<p style="text-align: center;"><span style="color: #ffffff;">Our loans come with only 6% interest from 12 months up to 240 months. You need to confirm this via Debi-Check which will also confirm the correct personal details that will allow us to proceed and speed up the loan process.</span></p>
 
 		</div> 
 	</div> </div></div></div><div class="wpb_column vc_column_container vc_col-sm-1"><div class="vc_column-inner"><div class="wpb_wrapper"></div></div></div></div></div></div></div></div></div></div></div></div></section><div      class="vc_row wpb_row section vc_row-fluid  vc_custom_1647074695075 grid_section" style=' text-align:left;'><div class=" section_inner clearfix"><div class='section_inner_margin clearfix'><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper">
